PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Drop bilde_renderer since it's been deprecated for a while
- pts-core: Yield /dev/mapper/* points in auto-disk-mount-points
- pts-core: Detect Internet presence for enterprise-setup
- pts-core: cli_set_process_title() still emits error on OS X so block its usage
- phoromatic: Add universal search functionality from web interface
- phoromatic: Improve formatting of annotations
- phoromatic: Mark system state as unknown when communication fails and hits the event server check

Phoronix Test Suite 5.6 Milestone 5
11 March 2015

- pts-core: Ignore test run locking in stress/multi-run mode
- pts-core: Allow 128 character result identifier strings
- pts-core: Switch the dump-documentation sub-command to generating the README in md format
- phoromatic: Change the custom From email sender to Reply-To
- phoromatic: Finish hooking-up multi-test/stress-run functionality via the benchmark page
- phoromatic: Send emails from rootadmin or group admin's email address where applicable rather than no-reply@
- phoromatic: Scroll bar on local suites page condensing
- phoromatic: Add "End Ticket" option to benchmark page
- phoromatic: Allow stress tests up to 90 days
- phoromatic: Allow stress runs up to 24 concurrent tests
- phoromatic: Add basic support for annotating/commenting on result files and individual graphs
- phoromatic: Add support for the user to delete annotations

Phoronix Test Suite 5.6 Milestone 4
25 February 2015

- pts-core: Improvements to phoronix-test-suite make-download-cache
- phoromatic: Add "admin data" page to let the rootadmin permanently delete schedules/results/systems
- phoromatic: Allow for system identifier variable in benchmark tickets of .SYSTEM
- phoromatic: Allow for system identifier variable in benchmark tickets of .GROUP
- phoromatic: Allow tickets to be removed from the individual benchmark page
- phoromatic: Allow creating new group accounts from the rootadmin page